fixing auto query
Signed-off-by: Wayan Mastra <yanmastra61@gmail.com>